@startuml
'https://plantuml.com/class-diagram

package model{
    class StateModel
    class ClipboardModel
    class ConfigModel
    class FileModel
    class QuestionModel
    class StorageModel
}
package viewmodel {
    class GptUiApplicationVM
    class AnswerVM
    class GptUiVM
    class HistoryVM
    class QuestionVM
    class ThemeVM
    class ViewModelMediator
}

package view {
    class GptUiApplication
    class AnswerController
    class GptUiApplication
    class GptUiController
    class HistoryController
    class QuestionController
    class ThemeController
}

GptUiApplication --> GptUiApplicationVM

GptUiApplicationVM --> ViewModelMediator

ThemeController ---> ThemeVM
QuestionController ---> QuestionVM
HistoryController ---> HistoryVM
AnswerController --> AnswerVM

GptUiController "1" --> "4" AnswerController: initialize
GptUiController --> AnswerVM
GptUiController --> GptUiVM

ThemeVM <--> ViewModelMediator
QuestionVM <--> ViewModelMediator
HistoryVM <--> ViewModelMediator
GptUiVM --> ViewModelMediator
AnswerVM <--> ViewModelMediator

StateModel --> StorageModel
QuestionModel --> StorageModel
QuestionModel --> ConfigModel

ViewModelMediator --> StateModel
ViewModelMediator --> QuestionModel
ViewModelMediator --> ClipboardModel
ViewModelMediator --> FileModel


@enduml